cleanup and refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,7 @@ set(CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH})
 
 # Import the Dyninst components
-find_package(Dyninst REQUIRED
-             COMPONENTS common
-                        dyninstAPI
-                        instructionAPI
-                        parseAPI
-                        symtabAPI
-                        common)
+find_package(Dyninst REQUIRED COMPONENTS symtabAPI)
 
 # Read the cache generated from building Dyninst
 load_cache(${Dyninst_DIR}
@@ -25,8 +19,21 @@ load_cache(${Dyninst_DIR}
            Boost_DEFINES
            TBB_INCLUDE_DIRS)
 
+add_library(kd-tooling
+  KernelDescriptor.cpp
+  KdUtils.cpp
+)
+
+target_include_directories(kd-tooling PRIVATE
+  ${DYNINST_INCLUDE_DIR}
+  ${DYNINST_Boost_INCLUDE_DIRS}
+  ${DYNINST_TBB_INCLUDE_DIRS}
+)
+
+target_compile_definitions(kd-tooling PRIVATE ${DYNINST_Boost_DEFINITIONS})
+
+
 add_executable(kd-tool
-               KernelDescriptor.cpp
                kd-tool.cpp)
 
 target_include_directories(kd-tool PRIVATE ${DYNINST_INCLUDE_DIR} ${DYNINST_Boost_INCLUDE_DIRS} ${DYNINST_TBB_INCLUDE_DIRS})
@@ -34,10 +41,7 @@ target_compile_definitions(kd-tool PRIVATE ${DYNINST_Boost_DEFINITIONS})
 
 target_link_directories(kd-tool PRIVATE ${DYNINST_Boost_LIBRARY_DIRS})
 target_link_libraries(kd-tool
-                      dyninstAPI
-                      instructionAPI
-                      parseAPI
+                      kd-tooling
                       symtabAPI
-                      common
                       ${DYNINST_Boost_LIBRARIES}
                       )
