Add update-exec (exec-rw) tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,12 @@ add_executable(extract-gpubin extract-gpubin.cpp)
 
 add_executable(update-fatbin update-fatbin.cpp)
 
+add_executable(update-exec update-exec.cpp)
+
+target_include_directories(update-exec PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/elfio-3.11
+)
+
 # rep-tool
 add_executable(rep-tool
                rep-tool.cpp
