Remove kernel-info tool and cleanup the repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,48 +20,9 @@ load_cache(${Dyninst_DIR}
   TBB_INCLUDE_DIRS
 )
 
-add_library(amdgpu-tooling
-  KernelDescriptor.cpp
-  KdUtils.cpp
-)
-
-target_include_directories(amdgpu-tooling PRIVATE
-  ${DYNINST_INCLUDE_DIR}
-  ${DYNINST_Boost_INCLUDE_DIRS}
-  ${DYNINST_TBB_INCLUDE_DIRS}
-
-  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/msgpack/include
-  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/elfio-3.11
-)
-
-target_link_libraries(amdgpu-tooling PRIVATE
-  Dyninst::symtabAPI
-)
-
-target_compile_definitions(amdgpu-tooling PRIVATE ${DYNINST_Boost_DEFINITIONS})
-target_link_directories(amdgpu-tooling PRIVATE ${DYNINST_Boost_LIBRARY_DIRS})
-
-
-add_executable(kernel-info
-               kernel-info.cpp)
-
-target_include_directories(kernel-info PRIVATE
-  ${DYNINST_INCLUDE_DIR}
-  ${DYNINST_Boost_INCLUDE_DIRS}
-  ${DYNINST_TBB_INCLUDE_DIRS}
-)
-
-target_compile_definitions(kernel-info PRIVATE ${DYNINST_Boost_DEFINITIONS})
-target_link_directories(kernel-info PRIVATE ${DYNINST_Boost_LIBRARY_DIRS})
-
-target_link_libraries(kernel-info PRIVATE
-  amdgpu-tooling
-  Dyninst::symtabAPI
-  ${DYNINST_Boost_LIBRARIES}
-)
-
 add_executable(update-kd
-               update-kd.cpp)
+               update-kd.cpp
+               KernelDescriptor.cpp)
 
 target_include_directories(update-kd PRIVATE
   ${DYNINST_INCLUDE_DIR}
@@ -73,7 +34,6 @@ target_compile_definitions(update-kd PRIVATE ${DYNINST_Boost_DEFINITIONS})
 target_link_directories(update-kd PRIVATE ${DYNINST_Boost_LIBRARY_DIRS})
 
 target_link_libraries(update-kd PRIVATE
-  amdgpu-tooling
   Dyninst::symtabAPI
   ${DYNINST_Boost_LIBRARIES}
 )
