Build preload file along with other tools

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set(CMAKE_C_COMPILER "${ROCM_PATH}/bin/amdclang")
 set(CMAKE_CXX_COMPILER "${ROCM_PATH}/bin/amdclang++")
 
 project(amdgpu-tooling LANGUAGES CXX)
+# ALL REGULAR TOOLS
 
 add_executable(expand-args expand-args.cpp)
 target_include_directories(
@@ -35,3 +36,21 @@ add_executable(update-fatbin update-fatbin.cpp)
 add_executable(update-exec update-exec.cpp)
 target_include_directories(
   update-exec PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/third-party/elfio-3.11)
+
+# SPECIAL CASE FOR PRELOAD
+
+# Paths for hipcc and the preload file
+set(HIPCC "${ROCM_PATH}/bin/hipcc")
+set(PRELOAD_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/preload.cpp")
+set(PRELOAD_SO "${CMAKE_CURRENT_BINARY_DIR}/preload.so")
+
+# Actual command to build preload.so
+add_custom_command(
+  OUTPUT "${PRELOAD_SO}"
+  COMMAND ${HIPCC} -D__HIP_PLATFORM_AMD__ -x c++ -shared -fpic
+          -I/opt/rocm-6.0.0/include/ "${PRELOAD_SOURCE}" -o "${PRELOAD_SO}"
+  DEPENDS "${PRELOAD_SOURCE}"
+  COMMENT "Building ${PRELOAD_SOURCE} with ${HIPCC}"
+  VERBATIM)
+
+add_custom_target(PreloadFile ALL DEPENDS "${PRELOAD_SO}")
